Change of color

--- a/front-end/patient-vis.html
+++ b/front-end/patient-vis.html
@@ -374,6 +374,7 @@
                     .width(150)
                     .height(150)
                     .radius(60)
+                    .ordinalColors(['#1F77B4', '#FF7F0E', '#2CA02C'])
                     .dimension(categoryDimension)
                     .group(categoryGroup)
                     .label(function (d) {
@@ -417,6 +418,7 @@
                     .width(150)
                     .height(150)
                     .radius(60)
+                    .ordinalColors(["#2CA02C", "#FF7F0E", "#d7191c"])
                     .dimension(normalDimension)
                     .group(normalGroup)
                     .label(function (d) {
